# gh-actions-test-py

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml  upload.yml
gh_actions_test/: __init__.py  mymod.py
ghactionspkg/: __init__.py  mymod.py
tests/: test_abc.py
